remove req version nums

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy==1.22.4
-pandas==1.4.3
-tensorflow==2.9.1
-torch==1.13.1
-gym==0.21.0
-matplotlib==3.5.2
-seaborn==0.11.2
-tqdm==4.64.0
-scikit-learn==1.1.1
-jupyterlab==3.4.3
-kaggle==1.5.12
+numpy
+pandas
+tensorflow
+torch
+gym
+matplotlib
+seaborn
+tqdm
+scikit-learn
+jupyterlab
+kaggle
